fixed aws warnings by updating header